# github-zocromas

./: .gitignore  disabled_do.txt  github-readme.txt  list.txt  pre-commit-script  projects.list  projectsminus.list  projectsplus.list  tabs.txt  tar-common.exculde
bins/client/src/: Makefile.am  mas_client.c  mas_client_main.c  mas_client_session.c  mas_client_sig.c  mas_init_client.c
bins/client/src/inc/: mas_client.h  mas_client_session.h
bins/zocromas_server/src/: Makefile.am  mas_init_server.c  mas_init_threads.c  mas_master.c  mas_server_main.c  mas_server_sig.c  mas_server_tools.c  mas_ticker.c  mas_watcher.c
bins/zocromas_server/src/inc/: mas_init_server.h  mas_init_threads.h  mas_master.h
commonlibs/mas_init/src/: Makefile.am  mas_cli_options.c  mas_init.c  mas_opts.c
commonlibs/mas_init/src/inc/: Makefile.am  mas_cli_options.h  (+2 more)
commonlibs/mas_wrap/src/: Makefile  Makefile.am  Makefile.in  mas_lib_thread.c  mas_memory.c
commonlibs/zocromas_mas_channel/src/: Makefile.am  mas_channel.c  mas_channel_buffer.c  mas_channel_listen.c  mas_channel_object.c  mas_channel_open.c  mas_channel_socket.c
commonlibs/zocromas_mas_log/src/: Makefile.am  mas_log.c  mas_logger.c
commonlibs/zocromas_mas_msg/src/: Makefile.am  mas_msg_tools.c
commonlibs/zocromas_mas_tools/src/: Makefile.am  mas_arg_tools.c
commonlibs/zocromas_mas_wrap/src/: Makefile.am  mas_lib.c  mas_memory.c
projects/bins/zocromas_direct/: .gitignore  Makefile.am  configure.ac  mas.project
projects/bins/zocromas_duf/: .gitignore  1.sqlite  2.sqlite  20150506.152827.tree.txt  20160307.vim  20160307a.vim  3.sqlite  ChangeLog  Makefile.am  Session.vim  aaa.tmp  alias.20160316.txt  alias.t.20160318.txt  alias.t.20160325.txt  alias.t.20160330.txt  configure.ac  configure_opts.default  current.vim  duf.dia  duf.dia~  duf.sql  duf1.dia~  duf1.sql  functionsA.dia  git.notes  history.20150919.183216.txt  mas.project  notes20160118.164741.txt  optfunmatch.sh  options.3a  out2.cmds  paths-with-jpg  scan-here.cmds  t.sqlite  t2.sqlite  t3.sqlite  test-history.txt  test.cmds  test.sh  test.txt  (+16 more)
projects/bins/zocromas_runonce/: .gitignore  config.h.in  configure.ac  mas.project  t20131021.102052.py  zocromas_runonce
projects/commonlibs/zocromas_exam/: .gitignore  configure.ac  mas.project
projects/commonlibs/zocromas_mas_init/: .gitignore  Makefile.am  configure.ac  configure_opts  configure_opts.default  mas.project
projects/commonlibs/zocromas_mas_io/: Makefile.am  configure.ac  mas.project
projects/commonlibs/zocromas_mas_modules/: Makefile.am  configure.ac  mas.project
projects/zocromas_zoctypes/: .gitignore  Makefile.am  configure.ac  m4zoc  mas.project  shn  zocvdate.txt
projects/zocromas_zoctypes/editing/: gvim-bufenter.vim  gvim-bufreadpost.vim  gvim-bufwinenter.vim  gvim-filetype.vim  gvim-guienter.vim  gvim-tabenter.vim  gvim-winenter.vim
projects/zocromas_zoctypes/inc/: Makefile.am  mas_autoobject_types.h  mas_autoset_types.h  mas_channel_types.h  mas_common_cdefs.h  mas_common_defs.h  mas_common_types.h  mas_control_types.h  mas_fileinfo_types.h  mas_http_types.h  mas_listener_control_types.h  mas_modules_types.h  mas_opts_types.h  mas_thread_variables_types.h  mas_transaction_control_types.h  mas_unidata_types.h  mas_unimodule_types.h  mas_variables_types.h  mas_varset_types.h  mas_varvec_types.h
projects/zocromas_zoctypes/mased/: shn.mased.vim  src.mased.vim  vimrc.mased.vim
projects/zocromas_zoctypes/src/: Makefile.am
zocmds/2/src/: Makefile.am  mas_cmdmod2_notify.c
zocromas/src/: .gitignore  Makefile  Makefile.am  Makefile.in  main.c  minitest.c
zocromas/src/channel/: Makefile  Makefile.am  Makefile.in  mas_channel.c  mas_channel_listen.c  mas_channel_object.c  mas_channel_open.c  mas_channel_socket.c
zocromas/src/cli/: Makefile  Makefile.am  Makefile.in  mas_cli_options.c
zocromas/src/client/: .gitignore  Makefile  Makefile.am  Makefile.in  mas_client.c  mas_client_main.c  mas_client_readline.c  mas_client_session.c  mas_client_sig.c  mas_init_client.c
zocromas/src/cmdmods/: Makefile  Makefile.am  Makefile.in  mas_cmdmod_check.c  mas_cmdmod_client.c  mas_cmdmod_ctrl.c  mas_cmdmod_do.c  mas_cmdmod_get.c  mas_cmdmod_listener.c  mas_cmdmod_mem.c  mas_cmdmod_readline.c  mas_cmdmod_root.c  mas_cmdmod_server.c  mas_cmdmod_set.c  mas_cmdmod_show.c
zocromas/src/control/: Makefile  Makefile.in  mas_control.c  mas_control_data.c
zocromas/src/fileinfo/: Makefile  Makefile.in  mas_fileinfo.c  mas_fileinfo_object.c  mas_unidata.c
zocromas/src/http/: Makefile  Makefile.am  Makefile.in  mas_http_get.c  mas_http_reply.c  mas_http_request.c  mas_http_utils.c  mas_transaction_http.c
zocromas/src/inc/: Makefile  Makefile.am  Makefile.in  mas_basic_def.h  mas_common.h  mas_common_types.h  mas_global.h  mas_list_def.h  mas_sig.h  mas_weak.h
zocromas/src/init/: Makefile  Makefile.am  Makefile.in  mas_init.c  mas_opts.c  mas_opts_data.c  mas_sig.c
zocromas/src/io/: Makefile  Makefile.in  mas_io.c
zocromas/src/listener/: Makefile  Makefile.am  Makefile.in  mas_lcontrol_object.c  mas_listener.c  mas_listener_control.c  mas_listener_control_list.c  mas_listener_wait_client.c  mas_listeners.c
zocromas/src/log/: Makefile  Makefile.am  Makefile.in  mas_log.c  mas_logger.c
zocromas/src/modules/: Makefile  Makefile.in  mas_modules_commands.c  mas_modules_commands_eval.c  mas_modules_load_module.c
zocromas/src/server/: .gitignore  Makefile  Makefile.am  Makefile.in  mas_init_server.c  mas_init_threads.c  mas_master.c  mas_server_main.c  mas_server_sig.c  mas_server_tools.c  mas_ticker.c  mas_watcher.c
zocromas/src/transaction/: Makefile  Makefile.am  Makefile.in  mas_rcontrol_object.c  mas_transaction.c  mas_transaction_control.c
zocromas/src/variables/: Makefile  Makefile.am  Makefile.in  mas_thread_variables.c  mas_variables.c
zocromas/src/xcromas/: Makefile  Makefile.am  Makefile.in  mas_message_io.c  mas_transaction_xcromas.c
zocromas/src/zoctools/: Makefile  Makefile.am  Makefile.in  mas_cli_options.c  mas_curses.c  mas_lib_thread.c  mas_msg_tools.c  mas_thread_tools.c
(+3709 files in other folders)
