SUBDIRS= inc
instdir=mastar
lib_LTLIBRARIES = \
	libzocromas_mas_arg_tools.la \
	libzocromas_mas_tools.la

libzocromas_mas_arg_tools_la_SOURCES    = mas_arg_tools.c
libzocromas_mas_tools_la_SOURCES        = mas_tools.c
# libzocromas_mas_tools_la_CPPFLAGS = @AM_CPPFLAGS@ @DEPS_CPPFLAGS@
# libzocromas_mas_tools_la_CFLAGS = @AM_CFLAGS@ -lmas_thread_tools
