ACLOCAL_AMFLAGS = -I .auxdir/m4
#? include_HEADERS = inc/stdio.h
SUBDIRS= src

# pkgconfigdir = $(libdir)/pkgconfig
# pkgconfig_DATA = @PACKAGE_NAME@.pc

# pkgsysconfdir = ${sysconfdir}/@PACKAGE@
# pkgsysconf_DATA = @PACKAGE@

#test.booo: 
#	echo @PACKAGE@ > test.booo
#	echo ${libdir} >> test.booo
#
#all-local: test.booo
