#
# include_HEADERS = *.h

libzocromas_mas_zoctypesincludedir = $(includedir)/mastar/types
libzocromas_mas_zoctypesinclude_HEADERS = mas_common_types.h mas_common_defs.h mas_channel_types.h mas_control_types.h mas_fileinfo_types.h \
		mas_list_def.h mas_listener_control_types.h mas_message_types.h \
		mas_opts_types.h mas_autoset_types.h mas_autoobject_types.h \
		mas_varvec_types.h mas_varset_types.h mas_thread_variables_types.h mas_th_types.h mas_transaction_control_types.h \
		mas_unidata_types.h mas_variables_types.h mas_modules_types.h
