SUBDIRS=inc
##########################################################################################
######### modules ########################################################################
##########################################################################################

pkglib_LTLIBRARIES = \
	mas_cmdmod_check.la \
	mas_cmdmod_client.la \
	mas_cmdmod_get.la \
	mas_cmdmod_listener.la \
	mas_cmdmod_mem.la \
	mas_cmdmod_readline.la \
	mas_cmdmod_server.la \
	mas_cmdmod_set.la \
	mas_cmdmod_show.la \
	mas_cmdmod_ctrl.la \
	mas_cmdmod_do.la \
	mas_cmdmod_root.la

mas_cmdmod_root_la_SOURCES      = mas_cmdmod_root.c
mas_cmdmod_root_la_LDFLAGS      =    -module -avoid-version -no-undefined ${AM_LDFLAGS}

mas_cmdmod_ctrl_la_SOURCES      = mas_cmdmod_ctrl.c
mas_cmdmod_ctrl_la_LDFLAGS      =    -module -avoid-version -no-undefined ${AM_LDFLAGS}

mas_cmdmod_do_la_SOURCES        = mas_cmdmod_do.c
mas_cmdmod_do_la_LDFLAGS        =    -module -avoid-version -no-undefined ${AM_LDFLAGS}

mas_cmdmod_check_la_SOURCES     = mas_cmdmod_check.c
mas_cmdmod_check_la_LDFLAGS     =    -module -avoid-version -no-undefined ${AM_LDFLAGS}

mas_cmdmod_set_la_SOURCES       = mas_cmdmod_set.c
mas_cmdmod_set_la_LDFLAGS       =    -module -avoid-version -no-undefined ${AM_LDFLAGS}

mas_cmdmod_show_la_SOURCES      = mas_cmdmod_show.c
mas_cmdmod_show_la_LDFLAGS      =   -module -avoid-version -no-undefined ${AM_LDFLAGS}

mas_cmdmod_get_la_SOURCES       = mas_cmdmod_get.c
mas_cmdmod_get_la_LDFLAGS       =    -module -avoid-version -no-undefined ${AM_LDFLAGS}

mas_cmdmod_mem_la_SOURCES       = mas_cmdmod_mem.c
mas_cmdmod_mem_la_LDFLAGS       =    -module -avoid-version -no-undefined ${AM_LDFLAGS}

mas_cmdmod_readline_la_SOURCES  = mas_cmdmod_readline.c
mas_cmdmod_readline_la_LDFLAGS  =    -module -avoid-version -no-undefined ${AM_LDFLAGS}

mas_cmdmod_client_la_SOURCES    = mas_cmdmod_client.c
mas_cmdmod_client_la_LDFLAGS    = -module -avoid-version -no-undefined ${AM_LDFLAGS}

mas_cmdmod_server_la_SOURCES    = mas_cmdmod_server.c
mas_cmdmod_server_la_LDFLAGS    = -module -avoid-version -no-undefined ${AM_LDFLAGS}

mas_cmdmod_listener_la_SOURCES  = mas_cmdmod_listener.c
mas_cmdmod_listener_la_LDFLAGS  = -module -avoid-version -no-undefined ${AM_LDFLAGS}

##########################################################################################

