#
# include_HEADERS = *.h


noinst_HEADERS = \
	mas_basic_def.h \
	mas_common.h \
	mas_common_types.h \
	mas_global.h \
	mas_list_def.h \
	mas_sig.h \
	mas_th_types.h 
	



# mas_server_SOURCES= mas_client.h mas_io.h mas_cs.h mas_global.h mas_cmdmod_client.h mas_cmdmod_get.h mas_cmdmod_mem.h mas_cmdmod_set.h mas_cmdmocmdmods.h mas_server_master.h mas_server_sig.h mas_sig.h mas_tools_def.h mas_tools.h mas_weak.h 
